--- a/scss/_carousel.scss
+++ b/scss/_carousel.scss
@@ -1,9 +1,42 @@
 .carousel-section {
   height: 100vh;
   background: #22262e;
-  background-attachment: fixed;
   width: 100%;
   color: #fff;
+
+  .carousel {
+    width: 100%;
+
+    .card {
+      background: none;
+      border: none;
+
+      .card-header {
+        border: none;
+        background: none;
+
+      }
+
+      .card-footer {
+        border: none;
+        background: none;
+      }
+    }
+
+    .carousel-indicators {
+      top: 100%;
+
+      li {
+        background-color: #fff;
+        height: 10px;
+        width: 10px;
+        border-radius: 50%;
+      }
+    }
+
+  }
+
+
 
   .container {
     height: 100vh;
@@ -11,104 +44,67 @@
     align-items: center;
     justify-content: center;
 
-    .my-slider {
-      .row {
-        // justify-content: center;
 
-        .col-xl-12 {
-          .card {
-            background: red;
-            border: none;
+  }
 
-            .card-header {
-              border: none;
-              background: transparent;
-            }
 
-            .card-body {
+  .cta {
+    background: rgb(38, 128, 231);
+    height: 300px;
+    width: 100%;
 
-              .btn-primary {
-                border-radius: 0;
-                padding: 1rem;
-                ;
-                color: #fff;
-                background: gray;
-                border: none;
-                outline: none;
+    .container {
+      display: flex;
+      height: inherit;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
+      font-weight: 700;
 
-              }
-            }
+      h1 {
+        font-size: 4em;
+      }
+    }
+  }
 
-            .card-footer {
-              background: transparent;
-              border: none;
-            }
-          }
+  #projects {
+    .row {
+      margin: 3rem auto;
+      align-items: center;
+      justify-content: space-evenly;
+
+      .col-xl-4 {
+        img {
+          width: auto;
         }
-
       }
     }
   }
 
-}
+  #partners {
+    background: rgb(38, 128, 231);
+    height: 200px;
+    width: 100%;
 
+    .container {
+      display: flex;
+      height: inherit;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
 
-.cta {
-  background: rgb(38, 128, 231);
-  height: 300px;
-  width: 100%;
-
-  .container {
-    display: flex;
-    height: inherit;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-    font-weight: 700;
-
-    h1 {
-      font-size: 4em;
-    }
-  }
-}
-
-#projects {
-  .row {
-    margin: 3rem auto;
-    align-items: center;
-    justify-content: space-evenly;
-
-    .col-xl-4 {
-      img {
-        width: auto;
+      h1 {
+        font-size: 4em;
       }
     }
   }
-}
 
-#partners {
-  background: rgb(38, 128, 231);
-  height: 200px;
-  width: 100%;
+  #partner-details {
+    background: #fff;
 
-  .container {
-    display: flex;
-    height: inherit;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-
-    h1 {
-      font-size: 4em;
+    .row {
+      margin-top: 1.5rem;
+      align-items: center;
     }
-  }
-}
-
-#partner-details {
-  background: #fff;
-
-  .row {
-    margin-top: 1.5rem;
-    align-items: center;
   }
 }
