--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -1,118 +1,89 @@
-.top-nav {
-    background: #edb059;
-    height: 8vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 99;
-
-    .contact-action {
-        width: 100%;
-        color: #fff;
-
-
-
-        .action-group {
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-            list-style-type: none;
-            line-height: 40px;
-
-
-            .actions {
-                font-size: .8em;
-            }
-
-            .actions {
-                i {
-                    font-size: 1.4em;
-                }
-
-
-                &:nth-child(1) {
-                    // flex: ;
-                }
-            }
-
-        }
-    }
-
-
-}
+// #edb059
 
 header {
+    position: fixed;
+    top: 0;
     width: 100%;
+    background: #fff;
+    z-index: 99;
 
-    .container-fluid {
-        position: fixed;
-        top: 8%;
-        z-index: 99;
-        background: #fff;
 
-    }
 
-    nav {
-        width: 100%;
+    .top-nav {
+        background: var(--primary);
+        color: #fff;
+        margin: 0;
 
-        .navbar-nav {
-            align-items: center;
-        }
 
-        .nav-item {
-            width: auto;
-            margin-left: 2rem;
+        .contact-action {
+            .action-group {
+                list-style-type: none;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin: 0;
+                font-size: 0.8em;
 
-            .nav-link {
-                &:hover {
-                    color: #edb059;
+
+                .show-on-med {
+
+                    @media all and (max-width:768px) {
+                        display: block;
+
+                    }
+                }
+
+                .actions {
+                    padding-top: 1.5rem;
+                    padding-bottom: 1.5rem;
+                    margin-left: 1rem;
+
+                    &:nth-child(1) {
+                        flex: 0 0 0%;
+                    }
+
+                    @media all and (max-width:999px) {
+                        display: none;
+
+                        &:nth-child(1) {
+                            display: flex;
+                            flex: 1;
+                            justify-content: center;
+                            font-size: 1.2em;
+                            font-weight: 700;
+
+                        }
+
+                    }
+
+
                 }
             }
-
         }
+
     }
-}
-
-.hide-on-lg {
-    display: none;
-}
-
-@media all and (max-width:768px) {
-
 
     nav {
-        display: none;
-    }
+        .navbar-brand {
+            display: none;
 
-    header {
-
-
-
-
-        .container-fluid {
-            top: 5%;
-
-            .hide-on-lg {
+            @media all and (max-width:999px) {
                 display: initial;
             }
         }
-    }
 
-    .top-nav {
-        .contact-action {
-            .action-group {
-                .actions {
-                    display: none;
-                }
+        .medium-list {
+            display: none;
+
+            @media all and (max-width:999px) {
+                display: initial;
             }
         }
 
+        .navbar-nav {
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+        }
     }
-
-    .show-on-med {
-        display: block !important;
-    }
-
-
 }
