--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,12 +2,12 @@ footer.sticky {
 
     height: auto;
     padding-top: 3rem;
-    padding-bottom: 3rem;
-    width: 100%;
     background-color: #000;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
+    flex-direction: column;
+    position: relative;
 
     .footer-content {
         .row {
@@ -16,10 +16,81 @@ footer.sticky {
                 color: #fff;
                 border: none;
                 margin-bottom: 1.5rem;
+
+                .card-footer {
+                    display: flex;
+
+                    i {
+                        margin-left: 1rem;
+
+                        &:hover {
+                            color: var(--primary);
+                            transition: var(--transition-hover);
+                        }
+                    }
+                }
+
+                .card-body {
+                    .list-group {
+                        .list-group-item {
+                            background: transparent;
+                            border: none;
+
+                            padding: .3rem;
+
+                            a {
+                                color: #fff;
+
+                                &:hover {
+                                    transition: var(--transition-hover);
+                                    color: var(--primary);
+                                }
+                            }
+                        }
+
+                    }
+
+                }
+
+
+
+
+
             }
         }
     }
 
+    .foot-note {
+        width: 100%;
+        background: #333;
+        color: #fff;
+        padding-right: 2rem;
+        padding-left: 4rem;
+
+    }
+
+    .top {
+        background: #333;
+        border: 2px solid #333;
+        border-radius: 50%;
+        height: 40px;
+        width: 40px;
+        // padding: 1rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        right: 5%;
+        bottom: 8%;
+        position: fixed;
+
+
+        i {
+            color: #fff;
+        }
+
+
+    }
 
 
 
