--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -38,6 +38,10 @@ section.banner {
                 padding-top: 1rem;
             }
 
+            a {
+                color: #fff;
+            }
+
             i {
                 border: solid #fff 2px;
                 padding: 1.2rem;
