--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,5 +3,8 @@
 // Restated Bootstrap Variables
 :root {
     --primary: #edb059;
+    --blue: #2680e7;
+    --deep-grey: #333;
+    --dark: #000;
     --transition-hover: all .2s ease-out;
 }
