--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -20,6 +20,9 @@ body {
 
 :root {
   --primary: #edb059;
+  --blue: #2680e7;
+  --deep-grey: #333;
+  --dark: #000;
   --transition-hover: all .2s ease-out;
 }
 
@@ -155,7 +158,7 @@ header nav .navbar-nav .nav-item .nav-link:hover::after {
 
 section.cta {
   width: 100%;
-  background-color: #095ecc;
+  background-color: var(--blue);
   padding-top: 4rem;
   padding-bottom: 4rem;
   color: #fff;
@@ -447,7 +450,7 @@ section.triangular-section .container {
 }
 
 .aside .card .card-link {
-  color: #edb059;
+  color: var(--primary);
   background: transparent;
 }
 
@@ -456,11 +459,11 @@ section.triangular-section .container {
 }
 
 .aside .card .card-body .card-title {
-  color: #edb059;
+  color: var(--primary);
 }
 
 .aside .card .card-body .card-title a {
-  color: #edb059;
+  color: var(--primary);
 }
 
 .aside .card .card-footer {
@@ -547,7 +550,7 @@ section.banner .card .arrow-down i:active {
 footer.sticky {
   height: auto;
   padding-top: 3rem;
-  background-color: #000;
+  background-color: var(--dark);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -605,15 +608,15 @@ footer.sticky .footer-content .row .card .card-body .list-group .list-group-item
 
 footer.sticky .foot-note {
   width: 100%;
-  background: #333;
+  background: var(--deep-grey);
   color: #fff;
   padding-right: 2rem;
   padding-left: 4rem;
 }
 
 footer.sticky .top {
-  background: #333;
-  border: 2px solid #333;
+  background: var(--deep-grey);
+  border: 2px solid var(--deep-grey);
   border-radius: 50%;
   height: 40px;
   width: 40px;
