--- a/scss/_project.scss
+++ b/scss/_project.scss
@@ -1,6 +1,6 @@
 section.cta {
   width: 100%;
-  background-color: var(--blue);
+  background-color: var(--primary);
   padding-top: 4rem;
   padding-bottom: 4rem;
   color: #fff;
