--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,9 +2,16 @@
 
 // Restated Bootstrap Variables
 :root {
-    --primary: #edb059;
-    --blue: #2680e7;
+    --primary: #4fb3a2;
+    --primary-transparent: #050607c7;
+    --blue: #C9DBE4;
     --deep-grey: #333;
-    --dark: #000;
+    --dark: #050607;
     --transition-hover: all .2s ease-out;
+    --LightSlateGrey: #98b2ba;
 }
+
+// Cadet Blue: #4fb3a2
+// Light Steel Blue: #C9DBE4
+// Dark Slate Grey: #050607
+// Light Slate Grey: #98b2ba
