--- a/scss/landing-page.scss
+++ b/scss/landing-page.scss
@@ -6,6 +6,7 @@ html {
 
 body {
     overflow-x: hidden;
+    position: relative;
 
 }
 
@@ -19,14 +20,17 @@ body {
 @import "mixins.scss";
 // Global CSS
 @import "global.scss";
-// Components
-@import "navigation.scss";
 @import "project.scss";
 @import "partners.scss";
 @import "image-gallery.scss";
 @import "triangular.scss";
-@import "carousel.scss";
 @import "blog.scss";
 @import "main.scss";
 @import "about.scss";
-@import "footer.scss";
+// Components
+@import "components/navigation.scss";
+@import "components/carousel.scss";
+@import "components/footer.scss";
+@import "components/accordion.scss";
+@import "components/popup.scss";
+@import "components/button.scss";
