--- a/scss/components/_popup.scss
+++ b/scss/components/_popup.scss
@@ -27,6 +27,11 @@
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
+
+        @media all and (max-width:480px) {
+            width: 90%;
+            background-color: red;
+        }
     }
 
 
